--- a/YLinks/Pages/Shared/_Layout.cshtml
+++ b/YLinks/Pages/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Site/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Site/Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
